--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
 body{
-	font-family: 'Prompt', sans-serif;
 	margin: 0;
 	padding: 0;
 	width: 100%;
 }
+/*Diseño Header y Nav Bar*/
 header{
 	margin: 0;
 	padding: 0;
@@ -25,9 +25,12 @@ header{
 }
 .content ul{
 	list-style: none;
-	margin: 25px;
-	padding: 0;
+	margin-top: 25px;
+	margin-right: 142px; 
 	float: right;
+}
+.menu-header{
+	font-family: 'Prompt', sans-serif;
 }
 .menu-header li{
 	display: inline-block;
@@ -39,3 +42,15 @@ header{
 	text-decoration: none;
 	padding: 5px;
 }
+h1{
+	display: inline-block;
+	font-family: 'Baloo Paaji', cursive;
+	margin: 10px 0;
+}
+#love-logo, #bunny-logo{
+	display: inline-block;
+}
+#love-logo{
+	color: #EF9A9A;
+}
+
